# Botinance

./: .env  .env.example  .gitignore  .secrets.enc  README.md  Update-Botinance.ps1  binance_ai_trading_plan.md  boti_health.ps1  boti_health.sh  boti_status.ps1  boti_status.sh  improvement_plan.md  pyproject.toml  run_paper_monitor.sh  run_visual_dashboard.ps1  run_visual_dashboard.sh  show_paper_status.sh  stop_visual_dashboard.ps1  stop_visual_dashboard.sh
docs/: deployment-cross-platform.md
docs/design/: phase-1-trade-correctness.md  phase-2-exit-management.md  phase-3-decision-scheduling.md  phase-4-ai-risk-gate.md  phase-5-multi-timeframe.md  phase-6-backtest-evaluation.md  phase-7-dashboard-observability.md  phase-8-position-activation.md
src/binance_ai/: __init__.py  config.py  dashboard_server.py  main.py  models.py  position_activation.py  secrets.py  service_manager.py  trade_guard.py
src/binance_ai/backtest/: data_loader.py  main.py  models.py  portfolio.py  reporter.py  runner.py
src/binance_ai/connectors/: __init__.py  binance_spot.py
src/binance_ai/data/: __init__.py  market_data.py
src/binance_ai/engine/: __init__.py  decision_scheduler.py  trading_engine.py
tests/: test_backtest.py  test_binance_spot.py  test_dashboard_server.py  test_decision_scheduler.py  test_executor.py  test_llm.py  test_momentum.py  test_news_service.py  test_paper_portfolio.py  test_position_activation.py  test_risk_engine.py  test_secrets.py  test_sell_diagnostics.py  test_service_manager.py  test_sync_paper_from_account.py  test_trading_engine.py
(+20 files in other folders)
